--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,19 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+
+bootJar {
+    baseName = 'gs-consuming-rest'
+    version = '0.1.0'
+}
 
 group = 'com.WDB40'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -27,5 +34,8 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework:spring-web')
+    testCompile('junit:junit')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
